--- a/_pages/contact.html
+++ b/_pages/contact.html
@@ -1,7 +1,7 @@
 ---
 permalink: /contact/
 ---
-<b>Contact us</b> 
+<b>Contact us</b><br><br>
 
 Living Apps sprl<br>
 
@@ -9,11 +9,12 @@ rue Van Bortonne 7<br>
 1090 Brussels<br>
 Belgium<br><br>
 
-VAT/RC BE 0564.821.397<br>
+VAT/RC BE 0564.821.397<br><br>
 
-Tel +32 485 087 949<br>
-<a href='mailto:info@my-poppy.eu'>info@my-poppy.eu</a>
-
+Tel: +32 485 087 949<br>
+Email: <a href='mailto:info@my-poppy.eu'>info@my-poppy.eu</a><br>
+Twitter: <a href='https://twitter.com/mypoppy_eu'>@mypoppy_eu</a><br>
+Facebook: <a href='https://www.facebook.com/mypoppyeu'>mypoppyeu</a>
 
 
 
