--- a/_pages/contact.html
+++ b/_pages/contact.html
@@ -14,10 +14,7 @@ VAT/RC BE 0564.821.397<br><br>
 Tel: +32 485 087 949<br>
 Email: <a href='mailto:info@my-poppy.eu'>info@my-poppy.eu</a><br>
 Twitter: <a href='https://twitter.com/mypoppy_eu'>@mypoppy_eu</a><br>
-Facebook: <a href='https://www.facebook.com/mypoppyeu'>mypoppyeu</a>
+Facebook: <a href='https://www.facebook.com/mypoppyeu'>mypoppyeu</a><br><br>
 
-
-
-
-
-
+<a href='https://docs.my-poppy.eu/privacy_poppy.html'>Privacy</a><br>
+<a href='https://docs.my-poppy.eu/Poppy_Conditions%20generales.pdf'>Terms & conditions</a> (conditions générales - algemene voorwaarden)
