--- a/_pages/contact.html
+++ b/_pages/contact.html
@@ -9,12 +9,11 @@ rue Van Bortonne 7<br>
 1090 Brussels<br>
 Belgium<br><br>
 
-VAT/RC BE 0564.821.397<br><br>
-
 Tel: +32 485 087 949<br>
 Email: <a href='mailto:info@my-poppy.eu'>info@my-poppy.eu</a><br>
 Twitter: <a href='https://twitter.com/mypoppy_eu'>@mypoppy_eu</a><br>
 Facebook: <a href='https://www.facebook.com/mypoppyeu'>mypoppyeu</a><br><br>
 
+VAT/RC BE 0564.821.397<br>
 <a href='https://docs.my-poppy.eu/privacy_poppy.html'>Privacy</a><br>
 <a href='https://docs.my-poppy.eu/Poppy_Conditions%20generales.pdf'>Terms & conditions</a> (conditions générales - algemene voorwaarden)
