<iframe src="https://www.my-poppy.eu/cnt/cnt.php" width="1" height="1" frameBorder="0">

--- a/_pages/open_source.html
+++ b/_pages/open_source.html
@@ -20,3 +20,5 @@ permalink: /open_source/
 <li><a href='http://citizensindisasters.wikispaces.com'>citizensindisasters.wikispaces.com</a>: Améliorer l'implication des citoyens en situation de crise</li>
 <li><a href='https://mypoppy.typeform.com/to/uwVNxR'>Votre vision</a> sur les projets à développer au niveau européen pour améliorer l'implication des citoyens en situation de crise</li>
 </ul>
+
+<iframe src="https://www.my-poppy.eu/cnt/cnt.php" width="1" height="1" frameBorder="0">
