--- a/_pages/contact.html
+++ b/_pages/contact.html
@@ -17,3 +17,5 @@ Facebook: <a href='https://www.facebook.com/mypoppyeu'>mypoppyeu</a><br><br>
 VAT/RC BE 0564.821.397<br>
 <a href='https://docs.my-poppy.eu/privacy_poppy.html'>Privacy</a><br>
 <a href='https://docs.my-poppy.eu/Poppy_Conditions%20generales.pdf'>Terms & conditions</a> (conditions générales - algemene voorwaarden)
+
+<iframe src="https://www.my-poppy.eu/cnt/cnt.php" width="1" height="1" frameBorder="0">
