--- a/_pages/events_upcoming.html
+++ b/_pages/events_upcoming.html
@@ -4,7 +4,7 @@ permalink: /events_upcoming/
 ---
 Crisis & emergency management: upcoming events
 
-<iframe src="https://www.my-poppy.eu/cnt/cnt.php" width="1" height="1" frameBorder="0">
+<iframe src="https://www.my-poppy.eu/cnt/cnt.php" width="1" height="1" frameBorder="0"></iframe>
 
 <div id="events2come" style='font-weight:normal;text-align:left'>
 </div>
