--- a/index.html
+++ b/index.html
@@ -1,4 +1,12 @@
 ---
-layout: home
+layout: single
 author_profile: true
+excerpt: "This post should [...]"
+header:
+  overlay_image: /images/event.jpg
+  overlay_filter: 0.9 # same as adding an opacity of 0.5 to a black background
+  caption: "Photo credit: [**Unsplash**](https://unsplash.com)"
+  actions:
+    - label: "More Info"
+      url: "https://unsplash.com"
 ---
