--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 layout: home
 author_profile: true
 header:
-  overlay_image: /images/event.jpg
-  overlay_filter: 0.9 # same as adding an opacity of 0.5 to a black background
+  overlay_image: /images/header.jpg
+  overlay_filter: 0.85 # same as adding an opacity of 0.5 to a black background
 ---
