--- a/_pages/products_and_services.html
+++ b/_pages/products_and_services.html
@@ -1,7 +1,7 @@
 ---
 layout: home
 author_profile: true
-excerpt: We help you speeding up alerts & decision making by leveraging the simplicity of IT, maps, geolocation and geodata
+excerpt: "We help you speeding up alerts and decision making"
 header:
   overlay_image: /images/header.jpg
   overlay_filter: 0.55 # same as adding an opacity of 0.5 to a black background
