--- a/_pages/products_and_services.html
+++ b/_pages/products_and_services.html
@@ -12,20 +12,8 @@ header:
       url: "https://unsplash.com"
     - label: "Consulting"
       url: "https://unsplash.com"
-
 permalink: /products/
 ---
 
+by leveraging the simplicity of IT, maps, geolocation and geodata
 
-
-
-Alerts
-
-ColMa
-	-> à faire ?
-
-Consulting
-	-> à refaire
-
-
-<iframe src="https://www.my-poppy.eu/cnt/cnt.php" width="1" height="1" frameBorder="0">
