--- a/_pages/products_and_services.html
+++ b/_pages/products_and_services.html
@@ -1,5 +1,5 @@
 ---
-layout: home
+layout: single
 author_profile: true
 excerpt: "We help you speeding up alerts and decision making"
 header:
@@ -14,6 +14,9 @@ header:
       url: "https://unsplash.com"
 permalink: /products/
 ---
+ColMa - à faire ?
+Consulting - à refaire
 
+<iframe src="https://www.my-poppy.eu/cnt/cnt.php" width="1" height="1" frameBorder="0">
 by leveraging the simplicity of IT, maps, geolocation and geodata
 
