--- a/_pages/products_and_services.html
+++ b/_pages/products_and_services.html
@@ -1,6 +1,6 @@
 ---
 layout: single
-author_profile: true
+author_profile: false
 excerpt: "We help you speeding up alerts and decision making"
 header:
   overlay_image: /images/header.jpg
