--- a/_pages/products_and_services.html
+++ b/_pages/products_and_services.html
@@ -1,7 +1,7 @@
 ---
 layout: single
 author_profile: false
-excerpt: "We help you speeding up alerts and decision making"
+excerpt: "Saving lives thanks to faster decision making"
 header:
   overlay_image: /images/header.jpg
   overlay_filter: 0.55 # same as adding an opacity of 0.5 to a black background
