--- a/_pages/products_and_services.html
+++ b/_pages/products_and_services.html
@@ -1,6 +1,7 @@
 ---
 layout: single
-author_profile: false
+share: false
+author_profile: true
 excerpt: "Saving lives thanks to faster decision making"
 header:
   overlay_image: /images/header.jpg
@@ -15,3 +16,4 @@ header:
 permalink: /products/
 ---
 bla
+
