--- a/_pages/products_and_services.html
+++ b/_pages/products_and_services.html
@@ -2,7 +2,11 @@
 layout: single
 share: false
 author_profile: true
-excerpt: "Saving lives thanks to faster decision making"
+excerpt: "Saving lives thanks to faster decision making
+
+
+
+"
 header:
   overlay_image: /images/header.jpg
   overlay_filter: 0.55 # same as adding an opacity of 0.5 to a black background
