--- a/_pages/products_and_services.html
+++ b/_pages/products_and_services.html
@@ -11,7 +11,7 @@ header:
   overlay_image: /images/header.jpg
   overlay_filter: 0.55 # same as adding an opacity of 0.5 to a black background
   actions:
-    - label: "Alerts"
+    - label: "TarGet"
       url: "https://unsplash.com"
     - label: "ColMa"
       url: "https://unsplash.com"
