--- a/_pages/products_and_services.html
+++ b/_pages/products_and_services.html
@@ -2,16 +2,12 @@
 layout: single
 share: false
 author_profile: true
-excerpt: "Saving lives thanks to faster decision making
-
-
-
-"
+excerpt: "Saving lives thanks to a better match between humans and technology"
 header:
   overlay_image: /images/header.jpg
   overlay_filter: 0.55 # same as adding an opacity of 0.5 to a black background
   actions:
-    - label: "TarGet"
+    - label: "Poppy Alert"
       url: "https://unsplash.com"
     - label: "ColMa"
       url: "https://unsplash.com"
@@ -19,5 +15,7 @@ header:
       url: "https://unsplash.com"
 permalink: /products/
 ---
-bla
 
+- **Poppy Alert**
+- **ColMa**
+- **Consulting**
