--- a/_pages/products_and_services.html
+++ b/_pages/products_and_services.html
@@ -8,11 +8,11 @@ header:
   overlay_filter: 0.55 # same as adding an opacity of 0.5 to a black background
   actions:
     - label: "Poppy Alert"
-      url: "https://unsplash.com"
+      url: "https://alerts.my-poppy.eu"
     - label: "ColMa"
-      url: "https://unsplash.com"
+      url: "https://colma.my-poppy.eu"
     - label: "Consulting"
-      url: "https://unsplash.com"
+      url: "https://maps.my-poppy.eu"
 permalink: /products/
 ---
 
