--- a/_pages/products_and_services.html
+++ b/_pages/products_and_services.html
@@ -16,6 +16,8 @@ header:
 permalink: /products/
 ---
 
-- **Poppy Alert**
-- **ColMa**
-- **Consulting**
+<ul>
+	<li><b>Poppy Alert<b></li>
+	<li><b>ColMa</b></li>
+	<li><b>Consulting</b></li>
+</ul>
