--- a/_pages/products_and_services.html
+++ b/_pages/products_and_services.html
@@ -2,17 +2,10 @@
 layout: single
 share: false
 author_profile: true
-excerpt: "Saving lives thanks to a better match between humans and technology"
+excerpt: "Saving lives thanks to a better match between humans \nand technology"
 header:
   overlay_image: /images/header.jpg
   overlay_filter: 0.55 # same as adding an opacity of 0.5 to a black background
-  actions:
-    - label: "Poppy Alert"
-      url: "https://alerts.my-poppy.eu"
-    - label: "ColMa"
-      url: "https://colma.my-poppy.eu"
-    - label: "Consulting"
-      url: "https://maps.my-poppy.eu"
 permalink: /products/
 ---
 
