--- a/_pages/products_and_services.html
+++ b/_pages/products_and_services.html
@@ -2,7 +2,7 @@
 layout: single
 share: false
 author_profile: true
-excerpt: "Saving lives thanks to a better match<br>between humans and technology<br><br><br>"
+excerpt: "<span style='font-size:larger'>Saving lives thanks to a better match<br>between humans and technology<br><br><br></span>"
 header:
   overlay_image: /images/header.jpg
   overlay_filter: 0.55 # same as adding an opacity of 0.5 to a black background
