--- a/_pages/about_us.html
+++ b/_pages/about_us.html
@@ -1,5 +1,12 @@
 ---
-permalink: /about/
+layout: single
+share: false
+author_profile: true
+excerpt: "<span style='font-size:170%'>Saving lives thanks to a better match<br>between humans and technology<br><br></span>"
+header:
+  overlay_image: /images/header.jpg
+  overlay_filter: 0.55 # same as adding an opacity of 0.5 to a black background
+permalink: /about_us/
 ---
 
 **« In times always more complex and uncertain, we boost our society's resilience through seamless information technology for the public authorities »**
