--- a/_pages/about_us.html
+++ b/_pages/about_us.html
@@ -9,3 +9,62 @@ header:
 permalink: /about_us/
 ---
 
+
+
+**Poppy** (Living Apps sprl) is a **private technological company** helping the authorities and emergency services to **better prepare** and **manage crisis situations** through a better use and understanding of information technologies.  
+
+We design products and provide advices to **speedup decision making** by simplifying and accelerating information transmission, with a deep understanding of their limitations and interaction with the users, particularly in crisis situations. Bits and bytes are our daily lunch and **telecoms**, **maps**, **real time** and **data analytics** are some of our core competencies.
+
+Founded in 2014 by [Christophe Cloquet](https://www.linkedin.com/in/ccloquet/), PhD, Poppy is proud a GovTech member of [software.brussels](https://software.brussels). 
+ 
+
+**How we see the world**
+
+:  We want to be a **positive actor of change** towards a better society, and for us, technics of any kind (information technology, security technologies, finance, ...) should be at the service of both the human beings and the mankind. 
+
+    **Resiliency requires agility and diversity**
+  : We believe that our **independence** makes us complementary to public and para-public structures in collaboration with which we want to do our bit.
+
+  : Our **small size** is definitely an asset for your organization. It allows us to quickly **adapt** to change and to adopt a **human approach**. Small also means a sharp answer to your needs: we are integrated in a **network of carefully selected professionnals**, that we sollicitate every time that it is needed. 
+
+  : Our specificity expresses itself through a **freedom of initiative** (research &  development of new products, building of new competencies, way of communicating and interpellating about emerging problematics...), by a **neutral external point of view** to analyze and challenge the cases you submit us, and a **_fighting spirit_** fostered by our daily risk-taking.
+
+  : Our external position allows us to **bridge public entities** that would otherwise be disconnected, allowing for relevant and non-confidential but often unaccessible information and innovation to flow when appropriate. 
+
+   : **Diversity** and **inclusion** are key to resiliency and we want to promote them. When required, we for instance collaborate with the consultants of Passwerk, who are carrying an autistic syndrom disorder (ASD). 
+   
+	: We believe that resiliency is built by **strengthing** both the **links** within local communities and the exchanges -- mainly of knowledge, experiences, arts and useful goods and services -- with distant communities. 
+	: Constant and active adjustments of the balance between local and global scales should be made, in order to stay far from both extremes. Currently, our way to help requilibrate the balance is to [choose local suppliers when possible](BLOG), and be part of the **[Zinne](ZINNE)** network. We must do all that is in our power to make more connections and not staying closed on ourselves.
+
+  : **Migration** is to us key to diversity. This is much debated and we do not ignore the issues it carries, which must be adressed. At our scale, we want to be part to a better welcome of refugees in Belgium, by supporting **[Singa](SINGA)**. This association has as goals the creation of links between refugees and local people. Links, again!
+  
+:  **Security** 
+	 : Whereas the positive impact of disaster rescue makes quite the unanimity, security is sometimes more disputed, particularly when it is conflicting with freedom.
+
+	: We acknowledge that in the state of today's mankind, there is no perfect solution to the freedom-security paradox, because no one is perfect.
+
+	: That means we must progress every day. We strongly believe that **security must be at the service of democracy** in the sense of a peaceful public space where citizens -- minorities included -- can make the society evolve by making their voice heared. Security should be the tool that **protects the weak against the strong** in view of the common good.
+
+	: Security must therefore be subordoned to a strong ethics, at the very least encompassing the Human Rights Declaration, and be exerced with that vision in mind. 
+
+	: To us, technical security measures are therefore a mean, and no solution in themselves. On the long term, education, solidarity, culture, and strenghtening of bonds will be the best warrants of a peaceful society.
+
+**Our approach**
+
+: If you agree with our vision, we work with you to **serve** your objectives, your organisation, your members and beneficiaries through **innovation** and **co-creation** of solutions, thanks to the meeting of our expertise and your knowledge of the field. 
+
+: Our holistic and systemic approach allow to consider the objectives, people and means within the same living picture. This ensures strategies are applicable, people are respected and means are used at their full potential.
+
+: We feel inspired by complexity thinkers such as [Edgar Morin](MORIN), by statement such as the [Agile Manifesto](AGILE) and by frameworks such as [ITIL v4](ITIL).
+
+: We value your **autonomy**, through which we try to stay away from position revenues. It goes through **open products** each time it is possible ([open-source](GITHUB), open data, …) and the open sharing of our expertise.
+
+: **Confidence**, that goes through **ethics** and **integrity** and **open collaboration** at each step and towards every person involved or impacted.
+
+: We are not perfect, tough, and we engage agreely in conversations with you to better respect our values, and make them evolve.
+
+In coherence with our vision, we proudly and actively support the [**OSGeo**](http://foss4g.be) (Open source Software for Geography) and in particular QGIS,  [**Singa**](https://www.singa-belgium.org/) (creating links between migrant and local people) and the [**Zinne**](https://www.zinne.brussels/) (Brussels' local "money") (see our blog post) and share voluntarily our knowledge with the working group « resilience and crisis management » of Brussels Prevention and Security.  
+
+By collaborating with us, you not only help your insitution to progress but also -- trough the profits margins you allow us to make to invest in that direction -- help the society as a whole.
+
+
