--- a/_pages/products_and_services.html
+++ b/_pages/products_and_services.html
@@ -5,14 +5,21 @@ author_profile: true
 excerpt: "<span style='font-size:170%'>Saving lives thanks to a better match<br>between humans and technology<br><br></span>"
 header:
   overlay_image: /images/header.jpg
-  overlay_filter: 0.55 # same as adding an opacity of 0.5 to a black background
+  overlay_filter: 0.55
 permalink: /products/
 ---
 
-<ul>
-	<li><b>Poppy Alert<b></li>
-	<li><b>ColMa</b></li>
-	<li><b>Consulting</b></li>
-</ul>
+In our complex epoch, we assist you and your organisation in saving lives thanks to a better match between humans and technology. This means to us: 
+
+easy to use and user-focussed tools, diversity, ...
+
+To this end, we propose <a href=''>Poppy Alert</a>, a small tool to notify your personnel and partners that something is going wrong. Juste the necessary amount of automation, but not more, as it is intended to work when the rest have failed, and in particular more complex systems that are integrated in your daily business processes.
+
+<a href=''>ColMa</a> helps you to seamlessly collaborate on a map, from the first second you have the tool in hands. No need for training, and if it fails, you just resorts to paper maps as before : it is just the same, but faster.
+
+Finally, our <b>Consulting</b> services help you to evolve towards a more resilient organization. 
+
+After a careful analysis, we'll help you to add -- or to remove -- just what is needed: it may be a tool (like a geographical information system), competencies for a better use of information systems in emergency planning and crisis management.
+
 
 credits: (1) starmanseries (2) James Cridland
