--- a/_pages/products_and_services.html
+++ b/_pages/products_and_services.html
@@ -8,19 +8,16 @@ header:
   overlay_filter: 0.55
 permalink: /products/
 ---
-<div style='color:gray'>
+<div style='color:lightgray'>
 	In the complex times we live in, we assist you and your organisation in <b>saving lives thanks to a better match between humans and technology</b>.
 	<br>
 	<br>
-	Ever heard of systemic failures like 112, OVH, Amazon, ... ?
-	<br>
-	<br>
-	We don't promise you the moon. Our specific approach is relisience-focused, and to this end, we propose both tools and advices.<br>
-	Just the necessary amount of automation, but not more, as it is intended to work when the rest have failed, and in particular more complex systems that are integrated in your daily business processes.
+	Ever heard of systemic failures like 112, OVH, Amazon, ...? Shit happens and we don't promise you the moon. Instead, our specific approach is **resilience-focused**, and to this end, we propose both **tools** and **advices**.<br>
 	<br>
 	<br>
 	For instance, <a href=''>Poppy Alert</a>, is a sharp tool to notify your personnel and partners that their attention is needed. 
 	Be it an Hospital Emergency Plan, Medical Intervention Plan or General Intervention plan, we have a solution for you. Just push on a button, and you are gone.
+	Just the necessary amount of automation, but not more, as it is intended to work when the rest have failed, and in particular more complex systems that are integrated in your daily business processes.
 	<br>
 	<br>
 	<a href=''>ColMa</a> helps you to seamlessly collaborate on a map, from the first second you have the tool in hands. No need for training, and if it fails, you just resorts to paper maps as before : it is just the same, but faster.
