--- a/_pages/products_and_services.html
+++ b/_pages/products_and_services.html
@@ -12,7 +12,7 @@ permalink: /products/
 	In the complex times we live in, we assist you and your organisation in <b>saving lives thanks to a better match between humans and technology</b>.
 	<br>
 	<br>
-	Ever heard of systemic failures like 112, OVH, Amazon, ...? Shit happens and we don't promise you the moon. Instead, our specific approach is **resilience-focused**, and to this end, we propose both **tools** and **advices**.<br>
+	Ever heard of systemic failures like 112, OVH, Amazon, ...? Shit happens, that's why our approach is <b>resilience-focused</b>. To this end, we propose both <b>tools</b> and <b>advices</b>.<br>
 	<br>
 	<br>
 	For instance, <a href=''>Poppy Alert</a>, is a sharp tool to notify your personnel and partners that their attention is needed. 
