--- a/_pages/products_and_services.html
+++ b/_pages/products_and_services.html
@@ -8,15 +8,18 @@ header:
   overlay_filter: 0.55
 permalink: /products/
 ---
+<style>
+b {color:white}
+</style>
 <div style='color:lightgray'>
 	In the complex times we live in, we assist you and your organisation in <b>saving lives thanks to a better match between humans and technology</b>.
 	<br>
 	<br>
-	Ever heard of systemic failures like 112, OVH, Amazon, ...? Shit happens, that's why our approach is <b>resilience-focused</b>. To this end, we propose both <b>tools</b> and <b>advices</b>.<br>
+	Ever heard of large failures like those of <a href='https://eena.org/news/112-temporarily-down-due-to-outages/'>112</a>, OVH, Amazon, ...? Shit happens, that's why our approach is <b>resilience-focused</b>. To this end, we propose both <b>tools</b> and <b>advices</b>.<br>
 	<br>
 	<br>
-	For instance, <a href=''>Poppy Alert</a>, is a sharp tool to notify your personnel and partners that their attention is needed. 
-	Be it an Hospital Emergency Plan, Medical Intervention Plan or General Intervention plan, we have a solution for you. Just push on a button, and you are gone.
+	For instance, <b><a href=''>Poppy Alert</a></b>, is a sharp tool to notify your personnel and partners in case of emergency. 
+	Be it an Hospital Emergency Plan, Medical Intervention Plan or General Intervention plan, we have a solution for you. Just push on a button, and that's it.
 	Just the necessary amount of automation, but not more, as it is intended to work when the rest have failed, and in particular more complex systems that are integrated in your daily business processes.
 	<br>
 	<br>
