--- a/_pages/products_and_services.html
+++ b/_pages/products_and_services.html
@@ -15,21 +15,22 @@ b {color:white}
 	In the complex times we live in, we assist you and your organisation in <b>saving lives thanks to a better match between humans and technology</b>.
 	<br>
 	<br>
-	Ever heard of large failures like those of <a href='https://eena.org/news/112-temporarily-down-due-to-outages/'>112</a>, OVH, Amazon, ...? Shit happens, that's why our approach is <b>resilience-focused</b>. To this end, we propose both <b>tools</b> and <b>advices</b>.<br>
+	Ever heard of large failures like those of <a href='https://eena.org/news/112-temporarily-down-due-to-outages/'>112</a>, OVH, Amazon, ...? Shit happens, that's why our approach is <b>resilience-focused</b>. To this end, we propose both <b>tools</b> and <b>advices</b>.
 	<br>
 	<br>
 	For instance, <b><a href=''>Poppy Alert</a></b>, is a sharp tool to notify your personnel and partners in case of emergency. 
 	Be it an Hospital Emergency Plan, Medical Intervention Plan or General Intervention plan, we have a solution for you. Just push on a button, and that's it.
-	Just the necessary amount of automation, but not more, as it is intended to work when the rest have failed, and in particular more complex systems that are integrated in your daily business processes.
+	Just the necessary amount of automation, but no more, as it is intended to work when the rest have failed, and in particular more complex systems that are integrated in your daily business processes.
 	<br>
 	<br>
-	<a href=''>ColMa</a> helps you to seamlessly collaborate on a map, from the first second you have the tool in hands. No need for training, and if it fails, you just resorts to paper maps as before : it is just the same, but faster.
+	<a href=''>ColMa</a> helps you to seamlessly collaborate on a map, from the first minute you have it in your hands. No need for training, and if it fails, just resorts to paper maps as before: it is just the same, after all.
 	<br>
 	<br>
-	Finally, our <b>Consulting</b> services help you to evolve towards a more resilient organization. 
-	After a careful analysis, we'll help you to add -- or to remove -- just what is needed: it may be a tool (like a geographical information system), competencies for a better use of information systems in emergency planning and crisis management.
+	Finally, our <b><a href=''>Consulting</a></b> services help you to evolve towards a more resilient organization in an information technology driven environment.
+	<br>
+	We'll help you with just what is needed: be it an analysis, a participatory process, advices to be more resilient, a piece of software or related services (like maps or a geographical information system), 
+	competencies for a better use of information systems in emergency planning and crisis management, or all that at once.
 	
-This means to us: 
 
 easy to use and user-focussed tools, diversity, ...
 credits: (1) starmanseries (2) James Cridland
