--- a/_pages/products_and_services.html
+++ b/_pages/products_and_services.html
@@ -18,8 +18,8 @@ b {color:white}
 	Ever heard of large failures like those of <a href='https://eena.org/news/112-temporarily-down-due-to-outages/'>112</a>, OVH, Amazon, ...? Shit happens, that's why our approach is <b>resilience-focused</b>. To this end, we propose both <b>tools</b> and <b>advices</b>.
 	<br>
 	<br>
-	For instance, <b><a href=''>Poppy Alert</a></b>, is a sharp tool to notify your personnel and partners in case of emergency. 
-	Be it an Hospital Emergency Plan, Medical Intervention Plan or General Intervention plan, we have a solution for you. Just push on a button, and that's it.
+	For instance, <b><a href=''>Poppy Alert</a></b> will notify your personnel and partners in case of emergency. 
+	Be it an Hospital Emergency Plan, Medical Intervention Plan or General Intervention plan, we have a simple but sharp solution for you: just push on a button, and that's it.
 	Just the necessary amount of automation, but no more, as it is intended to work when the rest have failed, and in particular more complex systems that are integrated in your daily business processes.
 	<br>
 	<br>
@@ -30,8 +30,10 @@ b {color:white}
 	<br>
 	We'll help you with just what is needed: be it an analysis, a participatory process, advices to be more resilient, a piece of software or related services (like maps or a geographical information system), 
 	competencies for a better use of information systems in emergency planning and crisis management, or all that at once.
-	
+	<br>
+	<br>
+	Drop us a line at info@my-poppy.eu or call us at +32 485 087 949, and let's discuss about your unique project!
 
-easy to use and user-focussed tools, diversity, ...
+
 credits: (1) starmanseries (2) James Cridland
 </div>
