--- a/_pages/products_and_services.html
+++ b/_pages/products_and_services.html
@@ -19,8 +19,8 @@ b {color:white}
 	<br>
 	<br>
 	For instance, <b><a href=''>Poppy Alert</a></b> will notify your personnel and partners in case of emergency. 
-	Be it an Hospital Emergency Plan, Medical Intervention Plan or General Intervention plan, we have a simple but sharp solution for you: just push on a button, and that's it.
-	Just the necessary amount of automation, but no more, as it is intended to work when the rest have failed, and in particular more complex systems that are integrated in your daily business processes.
+	Are you a hospital, a dispatching or a municipality, we have a simple but sharp solution for you: just push on a button, and all your members get the alert through redundants media.
+	Just the necessary amount of automation, but no more, as it is intended to work when the rest have failed, like more complex systems that are integrated in your daily business processes.
 	<br>
 	<br>
 	<a href=''>ColMa</a> helps you to seamlessly collaborate on a map, from the first minute you have it in your hands. No need for training, and if it fails, just resorts to paper maps as before: it is just the same, after all.
