--- a/_pages/products_and_services.html
+++ b/_pages/products_and_services.html
@@ -26,14 +26,15 @@ b {color:white}
 	<a href=''>ColMa</a> helps you to seamlessly collaborate on a map, from the first minute you have it in your hands. No need for training, and if it fails, just resorts to paper maps as before: it is just the same, after all.
 	<br>
 	<br>
-	Finally, our <b><a href=''>Consulting</a></b> services help you to evolve towards a more resilient organization in an information technology driven environment.
+	Finally, our <b><a href=''>consulting services</a></b> help you to evolve towards a more resilient organization in an information technology age.
 	<br>
-	We'll help you with just what is needed: be it an analysis, a participatory process, advices to be more resilient, a piece of software or related services (like maps or a geographical information system), 
+	We'll help you with just what is needed: be it an analysis, a participatory process, advices to be more resilient, an easy-to-use piece of software, or related services (like maps or a geographical information system), 
 	competencies for a better use of information systems in emergency planning and crisis management, or all that at once.
 	<br>
 	<br>
-	Drop us a line at info@my-poppy.eu or call us at +32 485 087 949, and let's discuss about your unique project!
+	Sounds interesting? Drop us a line at info@my-poppy.eu or call us at +32 485 087 949, and let's discuss about your unique project!
 
-
-credits: (1) starmanseries (2) James Cridland
+	<small>
+	credits: (1) starmanseries (2) James Cridland
+	</small>
 </div>
