--- a/_pages/products_and_services.html
+++ b/_pages/products_and_services.html
@@ -10,6 +10,7 @@ permalink: /products/
 ---
 <style>
 b {color:white}
+b > a {color: orange}
 </style>
 <div style='color:lightgray'>
 	In the complex times we live in, we assist you and your organisation in <b>saving lives thanks to a better match between humans and technology</b>.
