--- a/_pages/products_and_services.html
+++ b/_pages/products_and_services.html
@@ -24,7 +24,7 @@ b > a {color: orange}
 	Just the necessary amount of automation, but no more, as it is intended to work when the rest have failed, like more complex systems that are integrated in your daily business processes.
 	<br>
 	<br>
-	<a href=''>ColMa</a> helps you to seamlessly collaborate on a map, from the first minute you have it in your hands. No need for training, and if it fails, just resorts to paper maps as before: it is just the same, after all.
+	<b><a href=''>ColMa</a></b> helps you to seamlessly collaborate on a map, from the first minute you have it in your hands. No need for training, and if it fails, just resorts to paper maps as before: it is just the same, after all.
 	<br>
 	<br>
 	Finally, our <b><a href=''>consulting services</a></b> help you to evolve towards a more resilient organization in an information technology age.
