--- a/_pages/products_and_services.html
+++ b/_pages/products_and_services.html
@@ -10,7 +10,7 @@ permalink: /products/
 ---
 <style>
 b {color:white}
-b > a {color: orange}
+b > a {color: orange!important}
 </style>
 <div style='color:lightgray'>
 	In the complex times we live in, we assist you and your organisation in <b>saving lives thanks to a better match between humans and technology</b>.
@@ -19,7 +19,7 @@ b > a {color: orange}
 	Ever heard of large failures like those of <a href='https://eena.org/news/112-temporarily-down-due-to-outages/'>112</a>, OVH, <a href='https://www.vox.com/2017/3/2/14792636/amazon-aws-internet-outage-cause-human-error-incorrect-command'>Amazon</a>…? In information technologies, disruptions happens, let's thus embrace it from the beginning. That's why our approach is <b>resilience-focused</b>. To this end, we propose both <b>tools</b> and <b>advices</b>.
 	<br>
 	<br>
-	For instance, <b><a href=''>Poppy Alert</a></b> will notify your personnel and partners in case of emergency. 
+	<b><a href=''>Poppy Alert</a></b> will notify your personnel and partners in case of emergency. 
 	Are you a hospital, a dispatching or a municipality, we have a simple but sharp solution for you: just push on a button, and all your members get the alert through redundants media.
 	Just the necessary amount of automation, but no more, as it is intended to work when the rest have failed, like more complex systems that are integrated in your daily business processes.
 	<br>
