--- a/_pages/products_and_services.html
+++ b/_pages/products_and_services.html
@@ -13,21 +13,21 @@ b {color:white}
 b > a {color: orange!important}
 </style>
 <div style='color:lightgray'>
-	In the complex times we live in, we assist you and your organisation in <b>saving lives thanks to a better match between humans and technology</b>.
+	In the complex times we live in, we assist you and your organisation in <b style='color: orange!important'>saving lives thanks to a better match between humans and technology</b>.
 	<br>
 	<br>
 	Ever heard of large failures like those of <a href='https://eena.org/news/112-temporarily-down-due-to-outages/'>112</a>, OVH, <a href='https://www.vox.com/2017/3/2/14792636/amazon-aws-internet-outage-cause-human-error-incorrect-command'>Amazon</a>…? In information technologies, disruptions happens, let's thus embrace it from the beginning. That's why our approach is <b>resilience-focused</b>. To this end, we propose both <b>tools</b> and <b>advices</b>.
 	<br>
 	<br>
-	<b><a href=''>Poppy Alert</a></b> will notify your personnel and partners in case of emergency. 
+	<b><a style='color: orange!important' href=''>Poppy Alert</a></b> will notify your personnel and partners in case of emergency. 
 	Are you a hospital, a dispatching or a municipality, we have a simple but sharp solution for you: just push on a button, and all your members get the alert through redundants media.
 	Just the necessary amount of automation, but no more, as it is intended to work when the rest have failed, like more complex systems that are integrated in your daily business processes.
 	<br>
 	<br>
-	<b><a href=''>ColMa</a></b> helps you to seamlessly collaborate on a map, from the first minute you have it in your hands. No need for training, and if it fails, just resorts to paper maps as before: it is just the same, after all.
+	<b><a style='color: orange!important' href=''>ColMa</a></b> helps you to seamlessly collaborate on a map, from the first minute you have it in your hands. No need for training, and if it fails, just resorts to paper maps as before: it is just the same, after all.
 	<br>
 	<br>
-	Finally, our <b><a href=''>consulting services</a></b> help you to evolve towards a more resilient organization in an information technology age.
+	Finally, our <b><a style='color: orange!important' href=''>consulting services</a></b> help you to evolve towards a more resilient organization in an information technology age.
 	<br>
 	We'll help you with just what is needed: be it an analysis, a participatory process, advices to be more resilient, an easy-to-use piece of software, or related services (like maps or a geographical information system), 
 	competencies for a better use of information systems in emergency planning and crisis management, or all that at once.
