--- a/_pages/products_and_services.html
+++ b/_pages/products_and_services.html
@@ -15,7 +15,7 @@ b {color:white}
 	In the complex times we live in, we assist you and your organisation in <b style='color: orange!important'>saving lives thanks to a better match between humans and technology</b>.
 	<br>
 	<br>
-	Ever heard of large failures like those of <a href='https://eena.org/news/112-temporarily-down-due-to-outages/'>112</a>, OVH, <a href='https://www.vox.com/2017/3/2/14792636/amazon-aws-internet-outage-cause-human-error-incorrect-command'>Amazon</a>…? In information technologies, disruptions happens, let's thus embrace it from the beginning. That's why our approach is <b>resilience-focused</b>. To this end, we offer both <b>tools</b> and <b>advices</b>.
+	Ever heard of large failures like those of <a href='https://eena.org/news/112-temporarily-down-due-to-outages/'>112</a>, OVH, <a href='https://www.vox.com/2017/3/2/14792636/amazon-aws-internet-outage-cause-human-error-incorrect-command'>Amazon</a> ? In information technologies, disruptions happens, let's thus embrace it from the beginning. That's why our approach is <b>resilience-focused</b>. To this end, we offer both <b>tools</b> and <b>advices</b>.
 	<br>
 	<br>
 	<b><a style='color: orange!important' href=''>Poppy Alert</a></b> will notify your personnel and partners in case of emergency. 
@@ -23,5 +23,18 @@ b {color:white}
 	Just the necessary amount of automation, but no more, as it is intended to work when the rest have failed, like more complex systems that are integrated in your daily business processes.
 	<br>
 	<br>
-	
+	<b><a style='color: orange!important' href=''>ColMa</a></b> helps you to seamlessly collaborate on a map, from the first minute you have it in your hands. No need for training, and if it fails, just resorts to paper maps as before: it is just the same, after all.
+	<br>
+	<br>
+	Finally, our <b><a style='color: orange!important' href=''>consulting services</a></b> help you to evolve towards a more resilient organization in an information technology age.
+	<br>
+	We'll help you with just what is needed: be it an analysis, a participatory process, advices to be more resilient, an easy-to-use piece of software, or related services (like maps or a geographical information system), 
+	competencies for a better use of information systems in emergency planning and crisis management, or all that at once.
+	<br>
+	<br>
+	Sounds interesting? Drop us a line at info@my-poppy.eu or call us at +32 485 087 949, and let's discuss about your unique project!
+
+	<small>
+	credits: (1) starmanseries (2) James Cridland
+	</small>
 </div>
