--- a/_pages/products_and_services.html
+++ b/_pages/products_and_services.html
@@ -12,10 +12,10 @@ permalink: /products/
 b {color:white}
 </style>
 <div style='color:lightgray'>
-	In the complex times we live in, we assist you and your organisation in <b style='color: orange!important'>saving lives thanks to a better match between humans and technology</b>.
+	In the complex times we live in, we assist you and your organisation in <b >saving lives thanks to a better match between humans and technology</b>.
 	<br>
 	<br>
-	Ever heard of large failures like those of <a href='https://eena.org/news/112-temporarily-down-due-to-outages/'>112</a>, OVH, <a href='https://www.vox.com/2017/3/2/14792636/amazon-aws-internet-outage-cause-human-error-incorrect-command'>Amazon</a> ? In information technologies, disruptions happens, let's thus embrace it from the beginning. That's why our approach is <b>resilience-focused</b>. To this end, we offer both <b>tools</b> and <b>advices</b>.
+	Ever heard of large failures like those of <a href='https://eena.org/news/112-temporarily-down-due-to-outages/'>112</a>, OVH, <a href='https://www.vox.com/2017/3/2/14792636/amazon-aws-internet-outage-cause-human-error-incorrect-command'>Amazon</a> ...? In information technologies, disruptions happens, let's thus embrace it from the beginning. That's why our approach is <b>resilience-focused</b>. To this end, we offer both <b>tools</b> and <b>advices</b>.
 	<br>
 	<br>
 	<b><a style='color: orange!important' href=''>Poppy Alert</a></b> will notify your personnel and partners in case of emergency. 
@@ -28,11 +28,11 @@ b {color:white}
 	<br>
 	Finally, our <b><a style='color: orange!important' href=''>consulting services</a></b> help you to evolve towards a more resilient organization in an information technology age.
 	<br>
-	We'll help you with just what is needed: be it an analysis, a participatory process, advices to be more resilient, an easy-to-use piece of software, or related services (like maps or a geographical information system), 
-	competencies for a better use of information systems in emergency planning and crisis management, or all that at once.
+	<br>
+	We'll help you with just what is needed: be it an analysis, a participatory process to become more resilient, advices for a more adequate use of information technologies, an easy-to-use piece of software, or related services (like maps or a geographical information system), competencies for a better use of information systems in emergency planning and crisis management, or all that at once.
 	<br>
 	<br>
-	Sounds interesting? Drop us a line at info@my-poppy.eu or call us at +32 485 087 949, and let's discuss about your unique project!
+	Drop us a line at info@my-poppy.eu or call us at +32 485 087 949, and let's discuss about your unique project!
 
 	<small>
 	credits: (1) starmanseries (2) James Cridland
