--- a/_pages/products_and_services.html
+++ b/_pages/products_and_services.html
@@ -15,7 +15,7 @@ b {color:white}
 	In our complex world, we assist you and your organisation in <b >saving lives thanks to a better match between humans and technology</b>.
 	<br>
 	<br>
-	Ever heard of large failures like those of <a href='https://eena.org/news/112-temporarily-down-due-to-outages/'>112</a>, OVH, <a href='https://www.vox.com/2017/3/2/14792636/amazon-aws-internet-outage-cause-human-error-incorrect-command'>Amazon</a> ...? With information technologies, disruptions happens, let's thus embrace them from the beginning. That's why our approach is <b>resilience-focused</b>: simplicity, awareness, redundancy and diversity are some of the keys. To this end, we offer both <b>tools</b> and <b>advices</b>.
+	Ever heard of large failures like those of <a href='https://eena.org/news/112-temporarily-down-due-to-outages/'>112</a>, <a href='https://www.ovh.com/fr/news/cp2555.point_suite_aux_deux_incidents_du_9_novembre_2017'>OVH</a>, <a href='https://www.vox.com/2017/3/2/14792636/amazon-aws-internet-outage-cause-human-error-incorrect-command'>Amazon</a> ...? With information technologies, disruptions happens, let's thus embrace them from the beginning. That's why our approach is <b>resilience-focused</b>: simplicity, awareness, redundancy and diversity are some of the keys. To this end, we offer both <b>tools</b> and <b>advices</b>.
 	<br>
 	<br>
 	<b><a style='color: orange!important' href=''>Poppy Alert</a></b> will notify your personnel and partners in case of emergency. 
