--- a/_pages/products_and_services.html
+++ b/_pages/products_and_services.html
@@ -18,21 +18,24 @@ b {color:white}
 	Ever heard of large failures like those of <a href='https://eena.org/news/112-temporarily-down-due-to-outages/'>112</a>, <a href='https://www.ovh.com/fr/news/cp2555.point_suite_aux_deux_incidents_du_9_novembre_2017'>OVH</a>, <a href='https://www.vox.com/2017/3/2/14792636/amazon-aws-internet-outage-cause-human-error-incorrect-command'>Amazon</a> ...? With information technologies, disruptions happens, let's thus embrace them from the beginning. That's why our approach is <b>resilience-focused</b>: simplicity, awareness, redundancy and diversity are some of the keys. To this end, we offer both <b>tools</b> and <b>advices</b>.
 	<br>
 	<br>
-	<b><a style='color: orange!important' href=''>Poppy Alert</a></b> will notify your personnel and partners in case of emergency. 
-	Are you a hospital, a dispatching or a municipality, we have a simple but sharp solution for you: just push on a button, and all your members get the alert through redundants media.
-	Just the necessary amount of automation, but no more, as it is intended to work when the rest have failed, like more complex systems that are integrated in your daily business processes.
+	<b><a style='color: orange!important' href=''>Poppy Alert</a></b> will notify your personnel and partners in case of an emergency. 
+	Are you a hospital, a dispatching or a municipality, we have a simple but sharp solution for you: just log in and push on a button, and all your members get alerted through redundants media.
+	Just the necessary amount of automation, but no more, as the system is intended to work when the rest has failed, like more complex systems that are integrated in your daily business processes.
 	<br>
 	<br>
-	<b><a style='color: orange!important' href=''>ColMa</a></b> helps you to seamlessly collaborate on a map, from the first minute you have it in your hands. No need for training, and if it fails, just resorts to paper maps as before: it is just the same, after all.
+	<b><a style='color: orange!important' href=''>ColMa</a></b> helps you to seamlessly collaborate on a map, from the first minute you have it in your hands. No need for training, and if it fails, just resorts to paper maps as before: it is the same, after all.
 	<br>
 	<br>
 	Finally, our <b><a style='color: orange!important' href=''>consulting services</a></b> help you to evolve towards a more resilient organization in an information technology age.
 	<br>
 	<br>
-	We'll help you with just what is needed: be it an analysis, a participatory process to become more resilient, advices for a more adequate use of information technologies, an easy-to-use piece of software, or related services (like maps or a geographical information system), competencies for a better use of information systems in emergency planning and crisis management, or all that at once.
+	We will help you with what you specifically need: be it an needs-analysis, a participatory process to become more resilient, advices for a more adequate use of information technologies, an easy-to-use piece of software, or related services, competencies for a better use of information systems in emergency planning and crisis management, or all that at once.
 	<br>
 	<br>
-	Drop us a line at info@my-poppy.eu or call us at +32 485 087 949, and let's discuss about your unique project!
+	Up to now, we have for instance helped our customers in: <b>analyzing needs</b> for a geographical data infrastructure, assisting for a quite technical <b>public procurement process</b>, creating <b>static and dynamic maps</b> for emergency preparedness and event management, <b>training</b> them to use simple map tools in crisis management, <b>evaluating a disaster-exercise</b>...
+	<br>
+	<br>
+	Do you feel we can work together? Drop us a line at info@my-poppy.eu or call us at +32 485 087 949, and let's discuss about your unique project!
 
 	<small>
 	credits: (1) starmanseries (2) James Cridland
