--- a/_pages/products_and_services.html
+++ b/_pages/products_and_services.html
@@ -29,7 +29,7 @@ b {color:white}
 	Finally, our <b><a style='color: orange!important' href=''>consulting services</a></b> help you to evolve towards a more resilient organization in an information technology age.
 	<br>
 	<br>
-	We will help you with what you specifically need: be it an needs-analysis, a participatory process to become more resilient, advices for a more adequate use of information technologies, an easy-to-use piece of software, or related services, competencies for a better use of information systems in emergency planning and crisis management, or all that at once.
+	Rooted in both a research and an operational culture, that learnt us to work with complex and real issues, we will help you with what you specifically need: be it an needs-analysis, a participatory process to become more resilient, advices for a more adequate use of information technologies, an easy-to-use piece of software, or related services, competencies for a better use of information systems in emergency planning and crisis management, or all that at once.
 	<br>
 	<br>
 	Up to now, we have for instance helped our customers in: <b>analyzing needs</b> for a geographical data infrastructure, assisting for a quite technical <b>public procurement process</b>, creating <b>static and dynamic maps</b> for emergency preparedness and event management, <b>training</b> them to use simple map tools in crisis management, <b>evaluating a disaster-exercise</b>...
