--- a/_pages/products_and_services.html
+++ b/_pages/products_and_services.html
@@ -29,10 +29,10 @@ b {color:white}
 	Finally, our <b><a style='color: orange!important' href=''>consulting services</a></b> help you to evolve towards a more resilient organization in an information technology age.
 	<br>
 	<br>
-	Rooted in both a research and an operational culture, that learnt us to work with complex and real issues, we will help you with what you specifically need: be it an needs-analysis, a participatory process to become more resilient, advices for a more adequate use of information technologies, an easy-to-use piece of software, or related services, competencies for a better use of information systems in emergency planning and crisis management, or all that at once.
+	Rooted in both a research and an operational culture, that learnt us to work with complex and real issues, we will help you with what you specifically need: be it an <b>needs-analysis</b>, a participatory process to <b>become more resilient</b>, an easy-to-use <b>piece of software</b> and related services, <b>advices and training</b> for a better use of information systems in emergency planning and crisis management, or all that at once.
 	<br>
 	<br>
-	Up to now, we have for instance helped our customers in: <b>analyzing needs</b> for a geographical data infrastructure, assisting for a quite technical <b>public procurement process</b>, creating <b>static and dynamic maps</b> for emergency preparedness and event management, <b>training</b> them to use simple map tools in crisis management, <b>evaluating a disaster-exercise</b>...
+	Up to now, we have for instance helped our customers in: analyzing needs for a geographical data infrastructure, assisting for a quite technical public procurement process, creating static and dynamic maps for emergency preparedness and event management, training them to use simple map tools in crisis management, evaluating a disaster-exercise...
 	<br>
 	<br>
 	Do you feel we can work together? Drop us a line at info@my-poppy.eu or call us at +32 485 087 949, and let's discuss about your unique project!
