--- a/_pages/products_and_services.html
+++ b/_pages/products_and_services.html
@@ -18,15 +18,15 @@ b {color:white}
 	Ever heard of large failures like those of <a href='https://eena.org/news/112-temporarily-down-due-to-outages/'>112</a>, <a href='https://www.ovh.com/fr/news/cp2555.point_suite_aux_deux_incidents_du_9_novembre_2017'>OVH</a>, <a href='https://www.vox.com/2017/3/2/14792636/amazon-aws-internet-outage-cause-human-error-incorrect-command'>Amazon</a> ...? With information technologies, disruptions happens, let's thus embrace them from the beginning. That's why our approach is <b>resilience-focused</b>: simplicity, awareness, redundancy and diversity are some of the keys. To this end, we offer both <b>tools</b> and <b>advices</b>.
 	<br>
 	<br>
-	<b><a style='color: orange!important' href=''>Poppy Alert</a></b> will notify your personnel and partners in case of an emergency. 
+	<b><a style='color: orange!important' href='https://alerts.my-poppy.eu'>Poppy Alert</a></b> will notify your personnel and partners in case of an emergency. 
 	Are you a hospital, a dispatching or a municipality, we have a simple but sharp solution for you: just log in and push on a button, and all your members get alerted through redundants media.
 	Just the necessary amount of automation, but no more, as the system is intended to work when the rest has failed, like more complex systems that are integrated in your daily business processes.
 	<br>
 	<br>
-	<b><a style='color: orange!important' href=''>ColMa</a></b> helps you to seamlessly collaborate on a map, from the first minute you have it in your hands. No need for training, and if it fails, just resorts to paper maps as before: it is the same, after all.
+	<b><a style='color: orange!important' href='https://colma.eu'>ColMa</a></b> helps you to seamlessly collaborate on a map, from the first minute you have it in your hands. No need for training, and if it fails, just resorts to paper maps as before: it is the same, after all.
 	<br>
 	<br>
-	Finally, our <b><a style='color: orange!important' href=''>consulting services</a></b> help you to evolve towards a more resilient organization in an information technology age.
+	Finally, our <b><a style='color: orange!important' href='https://maps.my-poppy.eu'>consulting services</a></b> help you to evolve towards a more resilient organization in an information technology age.
 	<br>
 	<br>
 	Rooted in both a research and an operational culture, that learnt us to work with complex and real issues, we will help you with what you specifically need: be it an <b>needs-analysis</b>, a participatory process to <b>become more resilient</b>, an easy-to-use <b>piece of software</b> and related services, <b>advices and training</b> for a better use of information systems in emergency planning and crisis management, or all that at once.
